# journal-telegram-bot

./: .coverage  .env.example  .env.test.example  .gitignore  MVP评估报告.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: publish.yml  test.yml
bot/: cli.py  config.py  diary_service.py  github_client.py  handlers.py  main.py  scheduler.py  storage.py
bot/sync/: location_service.py  lunar_calendar.py  strava_message_templates.py  strava_scheduler.py  strava_token_store.py  weather_service.py
data/: munin.db
docs/: CODE_REVIEW_2025_02_13.md  TECHNICAL_REVIEW.md
frontend/site/: build.py  config.yml
frontend/site/assets/css/: style.css
frontend/site/templates/: base.html  index.html
macos/: com.journal.bot.plist  run.sh
munin/frontend/: __init__.py
munin/frontend/.github/workflows/: deploy.yml
munin/frontend/site/: build.py
munin/frontend/site/assets/css/: style.css
munin/frontend/site/assets/js/: main.js
munin/frontend/site/templates/: base.html  index.html  post.html
scripts/: issue_to_md.py
tests/: README.md  conftest.py  test_bootstrap_frontend.py
tests/fixtures/: sample_messages.json
tests/fixtures/sample_photos/: README.md
tests/integration/: test_bot_flow.py
tests/manual/: test_frontend_bootstrap.py
tests/unit/: test_config.py  test_github_client.py  test_handlers.py
