[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "journal-telegram-bot"
version = "0.1.0"
description = "Telegram Bot for Journaling to GitHub"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "python-telegram-bot>=21.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "psutil>=5.9.0"
]

[project.scripts]
munin = "bot.cli:app"

[tool.setuptools.packages.find]
include = ["bot*"]
